fix line wraps

--- a/intonation-toy/static/style.css
+++ b/intonation-toy/static/style.css
@@ -578,7 +578,7 @@ input[type="range"]:focus::-moz-range-thumb {
 }
 
 #tuning-fork-volume {
-    width: 150px;
+    width: 125px;
 }
 
 /* Zoom Control Styles */
